@@ -1,0 +1,8 @@
+/* $Id$ */
+
+#edit-feeds-FeedsFileFetcher-upload-wrapper .file-info {
+  float: left;
+  width: 200px;
+  border-right: 1px solid #ddd;
+  margin-right: 10px;
+  }
