@@ -154,6 +154,9 @@ function feeds_theme() {
     'feeds_info' => array(
       'file' => 'feeds.pages.inc',
     ),
+    'feeds_upload' => array(
+      'file' => 'feeds.pages.inc',
+    ),
   );
 }
 
