@@ -3,6 +3,9 @@
 Feeds 6.x 1.X XXXX
 ------------------
 
+- #850998 alex_b: Clean up file upload form. Note: If you supply file paths
+  directly in the textfield rather than uploading them through the UI, you will
+  have to adjust your importer's File Fetcher settings.
 - #850652 alex_b: Make ParserCSV (instead of FeedsCSVParser) populate column
   names.
 - #850638 alex_b: Introduce FeedsSource::preview().
